# 5d-chess-js

./: .gitignore  .gitlab-ci.yml  README.md  fen.ebnf  index.js  notation.old.md  package-lock.json  package.json  tsconfig.json
.gitlab/: .gitlab-webide.yml
docs/: COVER.md  README.md  index.html
src/: action.js  action.ts  bench.js  bench.ts  board.js  board.ts  cli.js  cli.ts  convert.js  convert.ts  copy.js  copy.ts  fen.js  fen.ts  hash.js  hash.ts  hcuboid.txt  index.js  index.ts  mate.gpu.js  mate.js  mate.ts  metadata.js  metadata.ts  notation.js  notation.new.js  parse.js  parse.ts  pgn.js  pgn.ts  piece.js  piece.ts  print.js  print.ts  turn.js  turn.ts  validate.js  validate.ts
src/tests/: brawn.test.js  brawn.test.ts  castling.test.js  castling.test.ts  checkmates.test.js  checkmates.test.ts  copy.test.js  copy.test.ts  custom_variant.test.js  enpassant.test.js  enpassant.test.ts  fen.test.js  fen.test.ts  misc.test.js  misc.test.ts  moves.test.js  moves.test.ts  notation.old.test.js  notation.test.js  parse.test.js  parse.test.ts  pgn.test.js  pgn.test.ts  promotion.test.js  promotion.test.ts  real_end.test.js  real_end.test.ts  spatial_only.test.js  spatial_only.test.ts  state.test.js  state.test.ts  turn_zero.test.js  turn_zero.test.ts  two_timelines.test.js  two_timelines.test.ts
src/types/: chess.ts
src/wasm/: Cargo.toml
src/wasm/src/: lib.rs
