[package]
name = "wasm-5d-chess-js"
version = "0.1.0"
authors = ["Shaun Wu <Alexbay218@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies.chess5dtools]
version = "0.1"
git = "https://github.com/adri326/5dchess-tools"
rev = "ce58bcedff3131a64540b5cf8a3b0e9e98975feb"

[dependencies]
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2"